force-app/main/default/objects/Transaction_History__b/Transaction_History__b.object-meta.xml
<CustomObject>
    <description>Object to store customers Transaction Records.</description>
    <label>ACME Transaction History 2</label>
    <pluralLabel>ACME Transaction History 2</pluralLabel>
</CustomObject>