force-app/main/default/objects/Transaction_History__b/fields/ABID__c.field-meta.xml
<CustomField>
    <fullName>ABID__c</fullName>
    <description>Customer&apos;s ACME Bank Unique Identification Number.</description>
    <inlineHelpText>Customer&apos;s ACME Bank Unique Identification Number.</inlineHelpText>
    <label>Customer ABID</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>