force-app/main/default/objects/Transaction_History__b/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <description>Account Number</description>
    <inlineHelpText>Account Number</inlineHelpText>
    <label>Account Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>