force-app/main/default/objects/Transaction_History__b/fields/MerchantABN__c.field-meta.xml
<CustomField>
    <fullName>MerchantABN__c</fullName>
    <description>Merchant ABN Number</description>
    <inlineHelpText>Merchant ABN Number</inlineHelpText>
    <label>Merchant ABN</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>