force-app/main/default/objects/Transaction_History__b/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Transaction Status like - Executed, Pending, Cancelled</description>
    <inlineHelpText>Status must be like - Executed, Pending or Cancelled</inlineHelpText>
    <label>Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>